MDEV-7203: replicate_events_marked_for_skip didn't work on Galera cluster

OPTION_SKIP_REPLICATION flag needs to be preserved for events received
on non-originating nodes.